<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
			android:shadowColor="#430fa5"
			android:shadowDx="-20.0"
			android:shadowDy="-30.0"
			android:shadowRadius="5"
			android:singleLine="true"
			android:ellipsize="marquee"
			android:marqueeRepeatLimit="marquee_forever"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:text="@string/welcome_msg"
			android:textStyle="italic"
            android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
			<requestFocus/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="8dp"
			android:labelFor="@+id/username_text"
			android:textStyle="bold"
			android:text="Username"
			android:textSize="25dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<EditText
			android:id="@+id/username_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="8dp"
			android:inputType="text"
			android:minHeight="48dp"
			android:singleLine="true"
			android:autofillHints="username" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:labelFor="@+id/password_text"
			android:text="Password"
			android:textSize="25dp"
			android:textStyle="bold"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<EditText
			android:id="@+id/password_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:inputType="textPassword"
			android:minHeight="48dp"
			android:singleLine="true"
			android:autofillHints="password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_marginTop="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="Login"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="Exit"/>

        <Button
            android:id="@+id/new_user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="New User"/>

    </LinearLayout>

</ScrollView>
